# IBusFunIM

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
examples/: pinyintest.cpp  pulse_record.cpp  whisper_test.cpp  wubitest.cpp
language/zh_CN/LC_MESSAGES/: messages.mo  messages.po
pinyin/: dicttrie.cpp  matrixsearch.cpp  userdict.cpp
pinyin/include/: atomdictbase.h  pinyinime.h
res/: headerbar.glade  ibus-fun.conf  ibus-fun.desktop  ibus-fun.xml.in  ibus_fun_setup.glade  wubi86.txt
scripts/: postinst  postrm  preinst  prerm
src/: AudioRecorder.cpp  AudioRecorder.h  Config.cpp  Config.h  DictFast.cpp  DictFast.h  DictPinyin.cpp  DictPinyin.h  DictSpeech.cpp  DictSpeech.h  DictWubi.cpp  DictWubi.h  Engine.cpp  Engine.h  RuntimeOptions.cpp  RuntimeOptions.h  Whisper.cpp  Whisper.h  common.h  common_log.h  glade_code_gen.go  ibus_fun_engine.cpp  ibus_fun_engine.h  ibus_fun_main.cpp  ibus_fun_setup.cpp
